{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 42,
  "lineage": "731c5dbf-309b-d619-5e46-19c36986aa37",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "nagios-core",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a1179631ec8933d7",
            "arn": "arn:aws:ec2:us-east-1:260996333774:instance/i-09632600bb1981413",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09632600bb1981413",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03bea96cee83feb9c",
            "private_dns": "ip-10-0-1-189.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.189",
            "public_dns": "ec2-44-201-182-114.compute-1.amazonaws.com",
            "public_ip": "44.201.182.114",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-059e07ce00e8b5726",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0633b73aede9f9eaa",
            "tags": {
              "Name": "nagios-core"
            },
            "tags_all": {
              "Name": "nagios-core"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0685b518978a94cfd"
            ]
          },
          "dependencies": [
            "module.compute.aws_security_group.vpc_sg_pub1",
            "module.compute.data.template_file.nagios-core",
            "module.network.aws_subnet.sn_pub_az1a_vpc10",
            "module.network.aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "node_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a1179631ec8933d7",
            "arn": "arn:aws:ec2:us-east-1:260996333774:instance/i-0ac9dfd8865672931",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ac9dfd8865672931",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02f5efc2a3173f978",
            "private_dns": "ip-10-0-1-164.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.164",
            "public_dns": "ec2-3-83-120-179.compute-1.amazonaws.com",
            "public_ip": "3.83.120.179",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0eb7b8478c622dc0c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0633b73aede9f9eaa",
            "tags": {
              "Name": "agent-node-a"
            },
            "tags_all": {
              "Name": "agent-node-a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0685b518978a94cfd"
            ]
          },
          "dependencies": [
            "module.compute.aws_security_group.vpc_sg_pub1",
            "module.compute.data.template_file.nagios-agent",
            "module.network.aws_subnet.sn_pub_az1a_vpc10",
            "module.network.aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "node_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a1179631ec8933d7",
            "arn": "arn:aws:ec2:us-east-1:260996333774:instance/i-0c78bf40142452a01",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c78bf40142452a01",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-081448db20416ee55",
            "private_dns": "ip-20-0-1-71.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "20.0.1.71",
            "public_dns": "ec2-52-91-248-190.compute-1.amazonaws.com",
            "public_ip": "52.91.248.190",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ec10676b95414fff",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e82c1fa4245ff5e1",
            "tags": {
              "Name": "agent-node-b"
            },
            "tags_all": {
              "Name": "agent-node-b"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-023d6427d74791682"
            ]
          },
          "dependencies": [
            "module.compute.aws_security_group.vpc_sg_pub2",
            "module.compute.data.template_file.nagios-agent",
            "module.network.aws_subnet.sn_pub_az1a_vpc20",
            "module.network.aws_vpc.vpc20"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "node_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a1179631ec8933d7",
            "arn": "arn:aws:ec2:us-east-1:260996333774:instance/i-0aa55a4f4a538f2c3",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0aa55a4f4a538f2c3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00231f2c4f0b8b8ff",
            "private_dns": "ip-10-0-2-101.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.101",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-061dce557a7d7966f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f28b2084027bac29",
            "tags": {
              "Name": "agent-node-c"
            },
            "tags_all": {
              "Name": "agent-node-c"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e3ef5c4cfadcfd11"
            ]
          },
          "dependencies": [
            "module.compute.aws_security_group.vpc_sg_priv1",
            "module.compute.data.template_file.nagios-agent",
            "module.network.aws_subnet.sn_priv_az1c_vpc10",
            "module.network.aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "node_d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a1179631ec8933d7",
            "arn": "arn:aws:ec2:us-east-1:260996333774:instance/i-0b26e3fea8dfea8ba",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b26e3fea8dfea8ba",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a89b0fb718fdc0b5",
            "private_dns": "ip-10-0-2-157.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.157",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a5c32db461192521",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f28b2084027bac29",
            "tags": {
              "Name": "agent-node-d"
            },
            "tags_all": {
              "Name": "agent-node-d"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e3ef5c4cfadcfd11"
            ]
          },
          "dependencies": [
            "module.compute.aws_security_group.vpc_sg_priv1",
            "module.compute.data.template_file.nagios-agent",
            "module.network.aws_subnet.sn_priv_az1c_vpc10",
            "module.network.aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "node_e",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a1179631ec8933d7",
            "arn": "arn:aws:ec2:us-east-1:260996333774:instance/i-0de14413107e6c4cc",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0de14413107e6c4cc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ab2fa81d3ca63573",
            "private_dns": "ip-20-0-2-196.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "20.0.2.196",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03c20ce2bd3a9cad8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-003c776020e756977",
            "tags": {
              "Name": "agent-node-e"
            },
            "tags_all": {
              "Name": "agent-node-e"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a04ebd50a9f3e58d"
            ]
          },
          "dependencies": [
            "module.compute.aws_security_group.vpc_sg_priv2",
            "module.compute.data.template_file.nagios-agent",
            "module.network.aws_subnet.sn_priv_az1c_vpc20",
            "module.network.aws_vpc.vpc20"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "node_f",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a1179631ec8933d7",
            "arn": "arn:aws:ec2:us-east-1:260996333774:instance/i-0b13b3e0c80031ad2",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b13b3e0c80031ad2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fb34fac8aca7d8d0",
            "private_dns": "ip-20-0-2-180.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "20.0.2.180",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-034360f925e32f878",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-003c776020e756977",
            "tags": {
              "Name": "agent-node-f"
            },
            "tags_all": {
              "Name": "agent-node-f"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a04ebd50a9f3e58d"
            ]
          },
          "dependencies": [
            "module.compute.aws_security_group.vpc_sg_priv2",
            "module.compute.data.template_file.nagios-agent",
            "module.network.aws_subnet.sn_priv_az1c_vpc20",
            "module.network.aws_vpc.vpc20"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "node_wim",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a1179631ec8933d7",
            "arn": "arn:aws:ec2:us-east-1:260996333774:instance/i-0ca9dc07eaa359116",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ca9dc07eaa359116",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-030f64482a7a50c85",
            "private_dns": "ip-20-0-1-134.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "20.0.1.134",
            "public_dns": "ec2-35-173-134-12.compute-1.amazonaws.com",
            "public_ip": "35.173.134.12",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f7ea459e40dcfa81",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e82c1fa4245ff5e1",
            "tags": {
              "Name": "agent-node-wim"
            },
            "tags_all": {
              "Name": "agent-node-wim"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-023d6427d74791682"
            ]
          },
          "dependencies": [
            "module.compute.aws_security_group.vpc_sg_pub2",
            "module.compute.data.template_file.nagios-agent",
            "module.network.aws_subnet.sn_pub_az1a_vpc20",
            "module.network.aws_vpc.vpc20"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_sg_priv1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:260996333774:security-group/sg-0e3ef5c4cfadcfd11",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e3ef5c4cfadcfd11",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16",
                  "20.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20240605184359893800000003",
            "name_prefix": "terraform-",
            "owner_id": "260996333774",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0074ed3b00bba3d46"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_sg_priv2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:260996333774:security-group/sg-0a04ebd50a9f3e58d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a04ebd50a9f3e58d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16",
                  "20.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20240605184359468000000001",
            "name_prefix": "terraform-",
            "owner_id": "260996333774",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cab9be0f9554af9a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc20"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_sg_pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:260996333774:security-group/sg-0685b518978a94cfd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0685b518978a94cfd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16",
                  "20.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20240605184401137500000004",
            "name_prefix": "terraform-",
            "owner_id": "260996333774",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0074ed3b00bba3d46"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_sg_pub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:260996333774:security-group/sg-023d6427d74791682",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-023d6427d74791682",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16",
                  "20.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20240605184359480400000002",
            "name_prefix": "terraform-",
            "owner_id": "260996333774",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cab9be0f9554af9a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc20"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ec2_lb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:260996333774:targetgroup/ec2-lb-tg/2899dc347956ce47",
            "arn_suffix": "targetgroup/ec2-lb-tg/2899dc347956ce47",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:260996333774:targetgroup/ec2-lb-tg/2899dc347956ce47",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ec2-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0074ed3b00bba3d46"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ec2_lb_tg-instance_nagios_core",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:260996333774:targetgroup/ec2-lb-tg/2899dc347956ce47-20240605193538441900000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:260996333774:targetgroup/ec2-lb-tg/2899dc347956ce47",
            "target_id": "i-09632600bb1981413"
          },
          "dependencies": [
            "module.compute.aws_instance.nagios-core",
            "module.compute.aws_security_group.vpc_sg_pub1",
            "module.compute.data.template_file.nagios-core",
            "module.lb.aws_lb_target_group.ec2_lb_tg",
            "module.network.aws_subnet.sn_pub_az1a_vpc10",
            "module.network.aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ec2_lb_tg-instance_node_a_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:260996333774:targetgroup/ec2-lb-tg/2899dc347956ce47-20240605193538132200000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:260996333774:targetgroup/ec2-lb-tg/2899dc347956ce47",
            "target_id": "i-0ac9dfd8865672931"
          },
          "dependencies": [
            "module.compute.aws_instance.node_a",
            "module.compute.aws_security_group.vpc_sg_pub1",
            "module.compute.data.template_file.nagios-agent",
            "module.lb.aws_lb_target_group.ec2_lb_tg",
            "module.network.aws_subnet.sn_pub_az1a_vpc10",
            "module.network.aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip10",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08cb8d25ea7e2fc77",
            "arn": "arn:aws:ec2:us-east-1:260996333774:elastic-ip/eipalloc-08cb8d25ea7e2fc77",
            "association_id": "eipassoc-02ddbfd6ee94760f6",
            "domain": "vpc",
            "id": "eipalloc-08cb8d25ea7e2fc77",
            "network_border_group": "us-east-1",
            "network_interface": "eni-080dec107af18ed53",
            "private_dns": "ip-10-0-1-49.ec2.internal",
            "private_ip": "10.0.1.49",
            "public_dns": "ec2-3-229-88-167.compute-1.amazonaws.com",
            "public_ip": "3.229.88.167",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip20",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e5d256cb0221f433",
            "arn": "arn:aws:ec2:us-east-1:260996333774:elastic-ip/eipalloc-0e5d256cb0221f433",
            "association_id": "eipassoc-0952b94abe2039444",
            "domain": "vpc",
            "id": "eipalloc-0e5d256cb0221f433",
            "network_border_group": "us-east-1",
            "network_interface": "eni-087e6a4f218818cbb",
            "private_dns": "ip-20-0-1-178.ec2.internal",
            "private_ip": "20.0.1.178",
            "public_dns": "ec2-52-5-228-18.compute-1.amazonaws.com",
            "public_ip": "52.5.228.18",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw10",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:260996333774:internet-gateway/igw-0111a652bf1ed4d01",
            "id": "igw-0111a652bf1ed4d01",
            "owner_id": "260996333774",
            "vpc_id": "vpc-0074ed3b00bba3d46"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw20",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:260996333774:internet-gateway/igw-0c55bc7c4b9d6118c",
            "id": "igw-0c55bc7c4b9d6118c",
            "owner_id": "260996333774",
            "vpc_id": "vpc-0cab9be0f9554af9a"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc20"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw10",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08cb8d25ea7e2fc77",
            "association_id": "eipassoc-02ddbfd6ee94760f6",
            "connectivity_type": "public",
            "id": "nat-0024e68a7d1691e35",
            "network_interface_id": "eni-080dec107af18ed53",
            "private_ip": "10.0.1.49",
            "public_ip": "3.229.88.167",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0633b73aede9f9eaa"
          },
          "dependencies": [
            "module.network.aws_eip.eip10",
            "module.network.aws_subnet.sn_pub_az1a_vpc10",
            "module.network.aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw20",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e5d256cb0221f433",
            "association_id": "eipassoc-0952b94abe2039444",
            "connectivity_type": "public",
            "id": "nat-01126e29f00844db0",
            "network_interface_id": "eni-087e6a4f218818cbb",
            "private_ip": "20.0.1.178",
            "public_ip": "52.5.228.18",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e82c1fa4245ff5e1"
          },
          "dependencies": [
            "module.network.aws_eip.eip20",
            "module.network.aws_subnet.sn_pub_az1a_vpc20",
            "module.network.aws_vpc.vpc20"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_sn_priv_az1c_vpc10",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:260996333774:route-table/rtb-0c917379566bea7fd",
            "id": "rtb-0c917379566bea7fd",
            "owner_id": "260996333774",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0024e68a7d1691e35",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "20.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "pcx-0bd48f7bc07399b8e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0074ed3b00bba3d46"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.eip10",
            "module.network.aws_nat_gateway.ngw10",
            "module.network.aws_subnet.sn_pub_az1a_vpc10",
            "module.network.aws_vpc.vpc10",
            "module.network.aws_vpc.vpc20",
            "module.network.aws_vpc_peering_connection.vpc_peering"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_sn_priv_az1c_vpc20",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:260996333774:route-table/rtb-04c1b3470d4e57436",
            "id": "rtb-04c1b3470d4e57436",
            "owner_id": "260996333774",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-01126e29f00844db0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "pcx-0bd48f7bc07399b8e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cab9be0f9554af9a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.eip20",
            "module.network.aws_nat_gateway.ngw20",
            "module.network.aws_subnet.sn_pub_az1a_vpc20",
            "module.network.aws_vpc.vpc10",
            "module.network.aws_vpc.vpc20",
            "module.network.aws_vpc_peering_connection.vpc_peering"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_sn_pub_az1a_vpc10",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:260996333774:route-table/rtb-098851b70a38569e9",
            "id": "rtb-098851b70a38569e9",
            "owner_id": "260996333774",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "20.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "pcx-0bd48f7bc07399b8e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": null,
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": "igw-0111a652bf1ed4d01",
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0074ed3b00bba3d46"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.igw10",
            "module.network.aws_vpc.vpc10",
            "module.network.aws_vpc.vpc20",
            "module.network.aws_vpc_peering_connection.vpc_peering"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_sn_pub_az1a_vpc20",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:260996333774:route-table/rtb-0d2aa4b39ab71e1c9",
            "id": "rtb-0d2aa4b39ab71e1c9",
            "owner_id": "260996333774",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "pcx-0bd48f7bc07399b8e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": null,
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": "igw-0c55bc7c4b9d6118c",
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cab9be0f9554af9a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.igw20",
            "module.network.aws_vpc.vpc10",
            "module.network.aws_vpc.vpc20",
            "module.network.aws_vpc_peering_connection.vpc_peering"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_sn_priv_az1c_vpc10",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dfef6038776fd7bb",
            "route_table_id": "rtb-0c917379566bea7fd",
            "subnet_id": "subnet-0f28b2084027bac29"
          },
          "dependencies": [
            "module.network.aws_eip.eip10",
            "module.network.aws_nat_gateway.ngw10",
            "module.network.aws_route_table.rt_sn_priv_az1c_vpc10",
            "module.network.aws_subnet.sn_priv_az1c_vpc10",
            "module.network.aws_subnet.sn_pub_az1a_vpc10",
            "module.network.aws_vpc.vpc10",
            "module.network.aws_vpc.vpc20",
            "module.network.aws_vpc_peering_connection.vpc_peering"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_sn_priv_az1c_vpc20",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07af94635ca98a0ac",
            "route_table_id": "rtb-04c1b3470d4e57436",
            "subnet_id": "subnet-003c776020e756977"
          },
          "dependencies": [
            "module.network.aws_eip.eip20",
            "module.network.aws_nat_gateway.ngw20",
            "module.network.aws_route_table.rt_sn_priv_az1c_vpc20",
            "module.network.aws_subnet.sn_priv_az1c_vpc20",
            "module.network.aws_subnet.sn_pub_az1a_vpc20",
            "module.network.aws_vpc.vpc10",
            "module.network.aws_vpc.vpc20",
            "module.network.aws_vpc_peering_connection.vpc_peering"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_sn_pub_az1a_vpc10",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0754b17656b42f172",
            "route_table_id": "rtb-098851b70a38569e9",
            "subnet_id": "subnet-0633b73aede9f9eaa"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw10",
            "module.network.aws_route_table.rt_sn_pub_az1a_vpc10",
            "module.network.aws_subnet.sn_pub_az1a_vpc10",
            "module.network.aws_vpc.vpc10",
            "module.network.aws_vpc.vpc20",
            "module.network.aws_vpc_peering_connection.vpc_peering"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_sn_pub_az1a_vpc20",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01fcfb032c044103b",
            "route_table_id": "rtb-0d2aa4b39ab71e1c9",
            "subnet_id": "subnet-0e82c1fa4245ff5e1"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw20",
            "module.network.aws_route_table.rt_sn_pub_az1a_vpc20",
            "module.network.aws_subnet.sn_pub_az1a_vpc20",
            "module.network.aws_vpc.vpc10",
            "module.network.aws_vpc.vpc20",
            "module.network.aws_vpc_peering_connection.vpc_peering"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_priv_az1c_vpc10",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:260996333774:subnet/subnet-0f28b2084027bac29",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f28b2084027bac29",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "260996333774",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0074ed3b00bba3d46"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_priv_az1c_vpc20",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:260996333774:subnet/subnet-003c776020e756977",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "20.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003c776020e756977",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "260996333774",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0cab9be0f9554af9a"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc20"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_pub_az1a_vpc10",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:260996333774:subnet/subnet-0633b73aede9f9eaa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0633b73aede9f9eaa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "260996333774",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0074ed3b00bba3d46"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_pub_az1a_vpc20",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:260996333774:subnet/subnet-0e82c1fa4245ff5e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "20.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e82c1fa4245ff5e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "260996333774",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0cab9be0f9554af9a"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc20"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc10",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:260996333774:vpc/vpc-0074ed3b00bba3d46",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f7ace940a52cdd7f",
            "default_route_table_id": "rtb-0fd03a71e53e0ba0d",
            "default_security_group_id": "sg-001a2bd086519c0dc",
            "dhcp_options_id": "dopt-0e98a7210df894e20",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0074ed3b00bba3d46",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fd03a71e53e0ba0d",
            "owner_id": "260996333774"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc20",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:260996333774:vpc/vpc-0cab9be0f9554af9a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "20.0.0.0/16",
            "default_network_acl_id": "acl-05cc021a9757cf162",
            "default_route_table_id": "rtb-07a827283ed71515b",
            "default_security_group_id": "sg-00f1cb48b1a57e89e",
            "dhcp_options_id": "dopt-0e98a7210df894e20",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cab9be0f9554af9a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07a827283ed71515b",
            "owner_id": "260996333774"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "vpc_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0bd48f7bc07399b8e",
            "peer_owner_id": "260996333774",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0074ed3b00bba3d46",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "vpc_id": "vpc-0cab9be0f9554af9a"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc10",
            "module.network.aws_vpc.vpc20"
          ]
        }
      ]
    }
  ]
}